<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/title_tracker"/>

    <item
        android:id="@+id/navigation_suppliers"
        android:icon="@drawable/ic_suppliers_black_24dp"
        android:title="@string/title_suppliers"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_forum"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile"/>
</menu>